--- a/Docker-Compose.yaml
+++ b/Docker-Compose.yaml
@@ -2,6 +2,7 @@ services:
   frontend:
     build:
       context: .
+      dockerfile: ./Dockerfile
     container_name: meta_frontend
     deploy:
       restart_policy:
